update start.sh